# IPCexamples

./: README.md
message_queues/: CMakeLists.txt  mq_receiver.cpp  mq_sender.cpp
pipes/: CMakeLists.txt  anonymous_pipe.cpp  named_pipe_reader.cpp  named_pipe_writer.cpp
semaphores/: CMakeLists.txt  semaphore_demo.cpp
shared_memory/: CMakeLists.txt  shm_consumer.cpp  shm_producer.cpp
sockets/: CMakeLists.txt  socket_client.cpp  socket_server.cpp
